fix navbar errors

--- a/stats.html
+++ b/stats.html
@@ -26,7 +26,7 @@
   <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
     <div class="container-fluid page-scroll">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar2">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapseTarget">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -36,7 +36,7 @@
           <img src="img/canada.png" alt="Canada">
         </a>
       </div>
-      <div class="navbar-collapse collapse">
+      <div id="collapseTarget" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li>
             <a href="index.html">Home</a>
@@ -49,7 +49,9 @@
           </li>
         </ul>
       </div>
+
     </div>
+
   </nav>
 
   <div class="container" style="margin-top: 100px;height: 100vh;">
