--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img src="img/canada.png" alt="Canada">
+                    CANADA
                 </a>
             </div>
             <div id="collapseTarget" class="navbar-collapse collapse">
@@ -70,26 +70,46 @@
             <div class="row">
                 <div class="col-lg-3">
                     <a href="https://en.wikipedia.org/wiki/Lorem_ipsum">
-                        <img class="img-responsive img-rounded" src="img/quebec.png" alt="">
+                        <div class="imagebox">
+                            <a href="#">
+                                <img src="img/quebec.png" class="category-banner img-responsive">
+                                <span class="imagebox-desc img-responsive img-rounded">Visit Quebec</span>
+                            </a>
+                        </div>
                     </a>
                 </div>
 
                 <div class="col-lg-3">
                     <a href="https://en.wikipedia.org/wiki/Lorem_ipsum">
-                        <img class="img-responsive img-rounded" src="img/olympics.png" alt="">
+                        <div class="imagebox">
+                            <a href="#">
+                                <img src="img/olympics.png" style="margin-top: 25px" class="category-banner img-responsive">
+                                <span class="imagebox-desc img-responsive img-rounded">Canada at PyeongChang Olympics</span>
+                            </a>
+                        </div>
                     </a>
                 </div>
 
                 <div class="col-lg-3">
                     <a href="https://en.wikipedia.org/wiki/Lorem_ipsum">
-                        <img class="img-responsive img-rounded" src="img/lakelouise.png" alt="">
+                        <div class="imagebox">
+                            <a href="#">
+                                <img src="img/lakelouise.png" class="category-banner img-responsive">
+                                <span class="imagebox-desc img-responsive img-rounded">Visit Lake Louise</span>
+                            </a>
+                        </div>
                     </a>
 
                 </div>
 
                 <div class="col-lg-3">
                     <a href="https://en.wikipedia.org/wiki/Lorem_ipsum">
-                        <img class="img-responsive img-rounded" src="img/vancouver.png" alt="">
+                        <div class="imagebox">
+                            <a href="#">
+                                <img src="img/vancouver.png" class="category-banner img-responsive">
+                                <span class="imagebox-desc img-responsive img-rounded">Weekend in Vancouver</span>
+                            </a>
+                        </div>
                     </a>
                 </div>
             </div>
