--- a/stats.html
+++ b/stats.html
@@ -33,7 +33,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img src="img/canada.png" alt="Canada">
+          CANADA
         </a>
       </div>
       <div id="collapseTarget" class="navbar-collapse collapse">
