--- a/aboutus.html
+++ b/aboutus.html
@@ -13,13 +13,163 @@
 
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <link href="css/mystyles.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/stats.css">
+  <link href="public/css/mystyles.css" rel="stylesheet">
+  <link rel="stylesheet" href="public/css/stats.css">
 
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <style>
+    .map {
+      width: 100%;
+    }
 
+    .map__frame {
+      position: relative;
+      display: block;
+      width: 100%;
+      height: 120px;
+      overflow: hidden;
+      cursor: pointer;
+    }
+    /* Google Map (static) */
+
+    .map__frame img {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      width: 100%;
+      height: auto;
+    }
+    /* Google Map (dynamic) */
+
+    .gm-style {
+      width: 100%;
+      min-height: 300px;
+    }
+    /* Google Map (dynamic) - info window */
+
+    .gm-style-iw {
+      font-size: 12px;
+      line-height: 18px;
+    }
+
+    .map__print,
+    .map__legend {
+      display: none;
+    }
+
+    .map__frame+.map__legend {
+      display: block;
+      height: 240px;
+      overflow-y: scroll;
+      -webkit-overflow-scrolling: touch;
+      font-size: 12px;
+      line-height: 18px;
+    }
+
+    .map__title,
+    .map__address,
+    .map__description {
+      display: block;
+      color: #000;
+    }
+
+    .map__title {
+      margin: 0;
+      font-weight: bold;
+      font-size: 14px;
+    }
+
+    .map__address {
+      margin: 0 0 10px;
+      font-weight: bold;
+    }
+
+    .map__legend ul {
+      margin: 0;
+      padding: 0;
+    }
+
+    .map__legend ul li {
+      position: relative;
+      width: 100%;
+      padding: 12px 10px 11px 38px;
+      border-bottom: 1px solid #d0d0d0;
+    }
+
+    .map__marker {
+      position: absolute;
+      left: 10px;
+      top: 13px;
+      width: 19px;
+      height: 28px;
+      font-size: 24px;
+      line-height: 24px;
+      text-align: center;
+    }
+
+    @media only screen and (min-width: 768px) {
+      .map {
+        height: 100%;
+        height: 100vh;
+      }
+
+      .map__legend {
+        display: block;
+        width: 192px;
+        height: auto;
+        overflow-y: auto;
+        padding: 5px 10px;
+        margin: 0 0 5px;
+        background: #fff;
+        color: #444;
+        line-height: 25px;
+        border: 1px solid #bbb;
+      }
+
+      .map>.map__legend {
+        display: none;
+      }
+
+      .map__legend strong {
+        color: #000;
+      }
+
+      .map__legend a {
+        color: #000;
+      }
+
+      .map__legend a:hover {
+        color: #ff6600;
+      }
+
+      .map__frame {
+        min-height: 100%;
+        background: #fff;
+      }
+
+      .map__frame+.map__legend {
+        display: none;
+      }
+
+      .map__print {
+        position: absolute;
+        left: 30px;
+        bottom: 30px;
+        z-index: 1;
+        display: inline-block;
+        padding: 6px 12px;
+        background: #ff6600;
+        color: #fff;
+        font-size: 14px;
+        text-transform: uppercase;
+      }
+    }
+  </style>
 </head>
 
 <body id="page-top" class="index">
@@ -53,9 +203,9 @@
     </div>
   </nav>
 
-  <div class="container" style="margin-top: 100px;height: 100vh;">
-    <h2>Embassy Contact Information</h2>
-    <p>Thinking of Immigration? Or maybe just a short vacation to Canada? Come Speak with one of our Embassy Advisers</p>
+  <div class="container" style="margin-top: 100px;">
+    <h2>Tour Agencies</h2>
+    <p>Thinking of Visiting Canada? Come Speak with one of our Advisors, or check out fun tourist spots on the map below!</p>
     <table class="table table-hover table-responsive">
       <thead>
         <tr>
@@ -104,11 +254,15 @@
     </table>
   </div>
 
-  <footer class="text-center">
-    <div class="footer-below">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
+  <div class="container" style="margin-bottom:20px">
+    <div class="map "></div>
+  </div>
+
+  <footer class="text-center ">
+    <div class="footer-below ">
+      <div class="container ">
+        <div class="row ">
+          <div class="col-lg-12 ">
             Copyright &copy; Armaan Dhanji BCIT 2017
           </div>
         </div>
@@ -116,10 +270,12 @@
     </div>
   </footer>
 
-  <script src="vendor/jquery/jquery.min.js"></script>
-
-  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="js/scroll.js"></script>
+  <script src="vendor/jquery/jquery.min.js "></script>
+  <script src="public/js/mapping.js "></script>
+  <script>
+  </script>
+  <script src="vendor/bootstrap/js/bootstrap.min.js "></script>
+  <script src="public/js/scroll.js "></script>
 
 
 </body>
