--- a/stats.html
+++ b/stats.html
@@ -13,8 +13,8 @@
 
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <link href="css/mystyles.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/stats.css">
+  <link href="public/css/mystyles.css" rel="stylesheet">
+  <link rel="stylesheet" href="public/css/stats.css">
 
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -100,7 +100,7 @@
   <script src="vendor/jquery/jquery.min.js"></script>
 
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="js/scroll.js"></script>
+  <script src="public/js/scroll.js"></script>
 
 </body>
 
