fixed api string for google maps

--- a/aboutus.html
+++ b/aboutus.html
@@ -255,7 +255,7 @@
   </div>
 
   <div class="container" style="margin-bottom:20px">
-    <div class="map "></div>
+    <div class="map"></div>
   </div>
 
   <script src="public/js/googlemaps.js"></script>
@@ -268,6 +268,7 @@
     googleMapGenerator.options.mapLat = 49.2754041;
     googleMapGenerator.options.mapLng = -123.1248643;
     googleMapGenerator.options.mapZoom = 12;
+    googleMapGenerator.options.apiKey = 'AIzaSyBdL1CAVuEViKjNBrJhkRJjFqdcP3O-8p4';
     googleMapGenerator.options.markerIconType = 'numeric';
     googleMapGenerator.options.markerIconHexBackground = 'ff6600';
     googleMapGenerator.options.markerIconHexColor = '000000';
